--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Test Git</title>
-</head>
+	<link rel="stylesheet" href="styles.css">
+</head> 
 <body>
     <button class="saludar">Saludar</button>
     <div class="hello"></div>
